Fixed selectors for hiding nav items on mobile

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -161,7 +161,8 @@ header {
     .header-inner {
         padding: 3rem 1rem;
 
-        [href="/"] {
+        [href="/"],
+        [href="//blog.omgmog.net/"] {
             display: none;
         }
     }
